Load and splitting data was completed

--- a/Univarate Selection.ipynb
+++ b/Univarate Selection.ipynb
@@ -2,15 +2,36 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as pd\n",
+    "import numpy as np\n",
     "from sklearn.feature_selection import SelectKBest\n",
     "from sklearn.feature_selection import chi2"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# reading data\n",
+    "Data = pd.read_csv('Data.csv')\n",
+    "\n",
+    "# splite target variable\n",
+    "X = Data.iloc[:,0:20]\n",
+    "y = Data.iloc[:,-1] # last column -> Target variable(proce range)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
