creating kbestselect model

--- a/Univarate Selection.ipynb
+++ b/Univarate Selection.ipynb
@@ -31,7 +31,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# create main mddel \n",
+    "# score\n",
+    "best_features = SelectKBest(score_func=chi2,k=10)"
+   ]
   }
  ],
  "metadata": {
