fit data to model

--- a/Univarate Selection.ipynb
+++ b/Univarate Selection.ipynb
@@ -28,13 +28,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "# create main mddel \n",
-    "# score\n",
+    "# score features using \"chi2\" \n",
+    "# select 10 features\n",
     "best_features = SelectKBest(score_func=chi2,k=10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# fit data to model\n",
+    "best_features.fit(X,y)"
    ]
   }
  ],
