--- a/Univarate Selection.ipynb
+++ b/Univarate Selection.ipynb
@@ -2,14 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "from sklearn.feature_selection import SelectKBest\n",
-    "from sklearn.feature_selection import chi2"
+    "from sklearn.feature_selection import chi2\n",
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -40,12 +41,185 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "# fit data to model\n",
-    "best_features.fit(X,y)"
+    "fit = best_features.fit(X,y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create score and name data frame\n",
+    "df_scores = pd.DataFrame(fit.scores_)\n",
+    "df_names = pd.DataFrame(X.columns)\n",
+    "\n",
+    "feature_scores = pd.concat([df_names,df_scores],axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>0</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>battery_power</td>\n",
+       "      <td>14129.866576</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>blue</td>\n",
+       "      <td>0.723232</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>clock_speed</td>\n",
+       "      <td>0.648366</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>dual_sim</td>\n",
+       "      <td>0.631011</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>fc</td>\n",
+       "      <td>10.135166</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               0             0\n",
+       "0  battery_power  14129.866576\n",
+       "1           blue      0.723232\n",
+       "2    clock_speed      0.648366\n",
+       "3       dual_sim      0.631011\n",
+       "4             fc     10.135166"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "feature_scores.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# rename column names\n",
+    "feature_scores.columns = ['Feature','Score']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "          Feature          Score\n",
+      "13            ram  931267.519053\n",
+      "11      px_height   17363.569536\n",
+      "0   battery_power   14129.866576\n",
+      "12       px_width    9810.586750\n",
+      "8       mobile_wt      95.972863\n",
+      "6      int_memory      89.839124\n",
+      "15           sc_w      16.480319\n",
+      "16      talk_time      13.236400\n",
+      "4              fc      10.135166\n",
+      "14           sc_h       9.614878\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(feature_scores.nlargest(10,'Score')) # print top 10 best features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "          Feature          Score\n",
+      "13            ram  931267.519053\n",
+      "11      px_height   17363.569536\n",
+      "0   battery_power   14129.866576\n",
+      "12       px_width    9810.586750\n",
+      "8       mobile_wt      95.972863\n",
+      "6      int_memory      89.839124\n",
+      "15           sc_w      16.480319\n",
+      "16      talk_time      13.236400\n",
+      "4              fc      10.135166\n",
+      "14           sc_h       9.614878\n",
+      "10             pc       9.186054\n",
+      "9         n_cores       9.097556\n",
+      "18   touch_screen       1.928429\n",
+      "5          four_g       1.521572\n",
+      "7           m_dep       0.745820\n",
+      "1            blue       0.723232\n",
+      "2     clock_speed       0.648366\n",
+      "3        dual_sim       0.631011\n",
+      "19           wifi       0.422091\n",
+      "17        three_g       0.327643\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/poorya/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:1: FutureWarning: by argument to sort_index is deprecated, please use .sort_values(by=...)\n",
+      "  \"\"\"Entry point for launching an IPython kernel.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(feature_scores.sort_index(by = 'Score',ascending=False))"
    ]
   }
  ],
