--- a/Correlation_Matrix.ipynb
+++ b/Correlation_Matrix.ipynb
@@ -24,6 +24,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "corr_matrix = data.corr()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
